# clinia-documentation-explorer

./: .gitignore  Dockerfile  README.md  clinia_streamlit_app.py  example.env  pyproject.toml
evals/: clinia_doc_eval.ipynb  clinia_entities_agent_evaluation.ipynb  results.csv  results_sample_data.csv
evals/data/: entities_map.json  sample_data.json
src/: agent_tools.py  chunker.py  clinia_api_entities_agent_ai.py  clinia_doc_agent.py  clinia_doc_crawler.py  utils.py
supabase_script/: initialisation.sql
tests/: test_chunker.py
