[project]
name = "clinia-doc-crawler"
version = "0.1.0"
description = "Project to faciliate the exploration of the clinia documentation"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "openai==1.59.6",
    "html2text==2024.2.26",
    "supabase==2.11.0",
    "pydantic-ai==0.0.22",
    "logfire==3.15.0",
    "streamlit==1.45.1"
]

[dependency-groups]
dev = [
    "ruff==0.8.2",
    "pytest>=8.3.3",
    "pytest-cov>=4.0.0",
    "ipykernel>=6.29.5",
    "nest_asyncio>=1.6.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
pythonpath = ["src"]

[tool.uv]
package=true
default-groups = ["dev"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["C901", "E501", "F401", "F403", "F841", "W605"]
select = ["B", "B9", "C", "E", "F", "W", "I001"]

[tool.ruff.lint.mccabe]
max-complexity = 18


